WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181696
REGRESSION(
r226973
/r226974): Four multimedia tests failing
https://bugs.webkit.org/show_bug.cgi?id=181696
Summary
REGRESSION(r226973/r226974): Four multimedia tests failing
Michael Catanzaro
Reported
2018-01-16 12:19:01 PST
The following tests are failing after
r226973
"[GStreamer] misc fixes and cleanups" and
r226974
"[GStreamer] Live streaming cleanups": imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/event_order_loadstart_progress.html imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/event_progress.html http/tests/media/remove-while-loading.html http/tests/security/contentSecurityPolicy/media-src-allowed.html The first two have text diffs (with printed timeouts), the last two are timeouts. I'm not going to update expectations for these, since we know exactly what caused them. Do you have time to look at them, Phil? --- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/event_order_loadstart_progress-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/event_order_loadstart_progress-actual.txt @@ -3,7 +3,7 @@ PASS audio events - loadstart, then progress -PASS setting src attribute on autoplay audio should trigger loadstart then progress event +TIMEOUT setting src attribute on autoplay audio should trigger loadstart then progress event Test timed out PASS video events - loadstart, then progress -PASS setting src attribute on autoplay video should trigger loadstart then progress event +TIMEOUT setting src attribute on autoplay video should trigger loadstart then progress event Test timed out --- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/event_progress-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/event_progress-actual.txt @@ -2,8 +2,10 @@ +Harness Error (TIMEOUT), message = null + PASS audio events - progress -PASS setting src attribute on autoplay audio should trigger progress event +NOTRUN setting src attribute on autoplay audio should trigger progress event PASS video events - progress -PASS setting src attribute on autoplay video should trigger progress event +NOTRUN setting src attribute on autoplay video should trigger progress event
Attachments
Patch
(6.34 KB, patch)
2018-01-17 02:53 PST
,
Philippe Normand
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2018-01-16 13:19:39 PST
I can check it tomorrow (european Wednesday). Sorry for the trouble and thanks for the report!
Philippe Normand
Comment 2
2018-01-17 02:53:20 PST
Created
attachment 331480
[details]
Patch
Philippe Normand
Comment 3
2018-01-17 03:10:57 PST
Committed
r227061
: <
https://trac.webkit.org/changeset/227061
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug